--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,26 +1,30 @@
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.4.0
+  rev: v4.5.0
   hooks:
-    - id: fix-byte-order-marker
+    - id: check-added-large-files
+    - id: check-ast
     - id: check-case-conflict
+    - id: check-executables-have-shebangs
+    - id: check-json
     - id: check-merge-conflict
+    - id: check-symlinks
+    - id: check-toml
+    - id: check-vcs-permalinks
+    - id: debug-statements
+    - id: detect-private-key
+    - id: destroyed-symlinks
     - id: end-of-file-fixer
+    - id: fix-byte-order-marker
     - id: mixed-line-ending
     - id: trailing-whitespace
-    - id: check-ast
-    - id: check-json
-    - id: check-yaml
-    - id: check-symlinks
-    - id: pretty-format-json
-      args: ["--autofix", "--no-ensure-ascii"]
 - repo: https://github.com/psf/black
-  rev: 23.3.0
+  rev: 23.11.0
   hooks:
     - id: black
-      args: ["--line-length", "120"]
+      args: ["--line-length", "100"]
 - repo: https://github.com/asottile/pyupgrade
-  rev: v3.4.0
+  rev: v3.15.0
   hooks:
   - id: pyupgrade
     args: [--py310-plus]
@@ -31,7 +35,7 @@ repos:
     args: ["--line-length", "120", "--profile", "black", "--filter-files"]
     name: isort
 - repo: https://github.com/Lucas-C/pre-commit-hooks
-  rev: v1.5.1
+  rev: v1.5.4
   hooks:
     - id: forbid-crlf
     - id: remove-crlf
@@ -51,7 +55,7 @@ repos:
       alias: nbqa-docformatter
       additional_dependencies: [docformatter==1.5.0]
 - repo: https://github.com/srstevenson/nb-clean
-  rev: "2.4.0"
+  rev: "3.1.0"
   hooks:
     - id: nb-clean
       args: ["--remove-empty-cells", "--preserve-cell-metadata", "tags", "slideshow", "--"]
