--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,39 +23,21 @@ repos:
   hooks:
     - id: black
       args: ["--line-length", "100"]
-- repo: https://github.com/asottile/pyupgrade
-  rev: v3.16.0
-  hooks:
-  - id: pyupgrade
-    args: [--py310-plus]
-- repo: https://github.com/pycqa/isort
-  rev: 5.13.2
-  hooks:
-  - id: isort
-    args: ["--line-length", "120", "--profile", "black", "--filter-files"]
-    name: isort
 - repo: https://github.com/Lucas-C/pre-commit-hooks
   rev: v1.5.5
   hooks:
     - id: forbid-crlf
     - id: remove-crlf
-- repo: https://github.com/nbQA-dev/nbQA
-  rev: "1.8.5"
-  hooks:
-    - id: nbqa-black
-      args: [--nbqa-skip-celltags=before-import]
-    - id: nbqa-pyupgrade
-      args: [--py39-plus]
-    - id: nbqa-isort
-      args: [--nbqa-skip-celltags=before-import, --profile=black]
-    - id: nbqa-check-ast
-    - id: nbqa
-      entry: nbqa docformatter -i
-      name: nbqa-docformatter
-      alias: nbqa-docformatter
-      additional_dependencies: [docformatter==1.5.0]
 - repo: https://github.com/srstevenson/nb-clean
   rev: "3.3.0"
   hooks:
     - id: nb-clean
       args: ["--remove-empty-cells", "--preserve-cell-metadata", "tags", "slideshow", "--"]
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.5.5
+  hooks:
+    - id: ruff
+      types_or: [ python, pyi, jupyter ]
+      args: [ --fix ]
+    - id: ruff-format
+      types_or: [ python, pyi, jupyter ]
